# sbe201-final-project-sbe201-team01

./: BWT.hpp  BWTtest.cpp  CMakeLists.txt  Documentation.md  suff.cpp  suff.hpp  suffix.hpp  sufftest.cpp
